[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-proxy-mcp"
version = "0.1.0"
description = "Offload context management to cheap models so expensive reasoning models can focus on thinking."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Context Proxy Contributors"}
]
keywords = ["mcp", "context-management", "ai-memory", "deepseek", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
context-proxy-mcp = "context_proxy_mcp.server:main"

[tool.setuptools.packages.find]
include = ["context_proxy_mcp*"]
